fix bug where like-icon was repeating on smaller devices

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -30,6 +30,7 @@
 
 .card__icon {
   background-image: url(../images/like-icon-default.svg);
+  background-repeat: no-repeat;
   width: 23px;
   height: 20px;
   align-self: center;
